Modify buildspec to add deletion of uncompressed elm file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,7 @@ phases:
     commands:
       - echo Building Elm files...
       - bash optimize.sh src/Main.elm
+      - rm -rf build/elm.js
 artifacts:
   files:
     - "**/*"
