Add post build script

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,9 @@ phases:
       - bash codebuild.sh
       - rm -rf build/elm.js
       - bash delete_old.sh
+  post_build:
+    commands:
+      - bash post_build.sh
 artifacts:
   files:
     - "**/*"
